--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,7 +11,9 @@ $theme-colors: (
   "danger":     #DC3545,
   "light":      #F8F9FA,
   "dark":       #343A40,
+  "save":       #264F78,
 );
+
 
 
 @import 'node_modules/bootstrap/scss/bootstrap.scss'
