ft: Vista listado tipos de monedas

--- a/src/styles/tablaInfinita.css
+++ b/src/styles/tablaInfinita.css
@@ -21,7 +21,7 @@ table{
 /* td con acciones: */
 /* class="Acciones text-center" */
 .Acciones{
-
+    text-align: center;
 }
 /* iconos acciones: */
 /* class="mx-2 icono" */
