--- a/src/styles/checkbox.css
+++ b/src/styles/checkbox.css
@@ -1,6 +1,6 @@
 input[type="checkbox"] {
     appearance: none;
-    border: none;
+    border: 1px solid #d9d9d9;
     outline: none;
     cursor: pointer;
     width: 1rem;
