up: Se añadió otra clase para las columnas de la tabla en el archivo de estilos tablaListado

--- a/src/styles/tablaListado.css
+++ b/src/styles/tablaListado.css
@@ -34,6 +34,10 @@ td{
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
 }
+.col-xxs{
+    width: 5rem;
+    max-width: 5rem;
+}
 .col-xs{
     width: 10rem;
     max-width: 10rem;
