--- a/src/styles/tablaListado.css
+++ b/src/styles/tablaListado.css
@@ -1,6 +1,7 @@
 .tablaContainer{
     display: flex;
-    height: 31rem;
+    /* height: 31rem; */
+    flex-grow: 1;
     min-width: 31rem;
     margin-top: 1.5rem;
     overflow-y: scroll;
@@ -26,13 +27,18 @@ th{
     max-height: 3rem;
 }
 td{
-    background-color: #d9d9d9;
     color: #000;
     font-size: 1rem;
     height: 2.5rem;
     max-height: 2.5rem;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
+}
+.td1{
+    background-color: #e5e5e5;
+}
+.td2{
+    background-color: #ececec;
 }
 .col-xxs{
     width: 5rem;
