--- a/src/styles/tablaListado.css
+++ b/src/styles/tablaListado.css
@@ -31,8 +31,7 @@ td{
     font-size: 1rem;
     height: 2.5rem;
     max-height: 2.5rem;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
+    padding: 0.5rem;
 }
 .td1{
     background-color: #e5e5e5;
