--- a/src/styles/tablaListado.css
+++ b/src/styles/tablaListado.css
@@ -23,7 +23,7 @@ th{
     color: #fff;
     font-weight: bold;
     font-size: 1rem;
-    height: 3rem;
+    /* height: 3rem; */
     max-height: 3rem;
 }
 td{
