--- a/src/styles/checkbox.css
+++ b/src/styles/checkbox.css
@@ -23,10 +23,9 @@ input[type="checkbox"]::before {
     background-color: white;
 }
 input[type="checkbox"]:checked::before {
-    content: '\2714';
-    overflow: hidden;
+    content: '✔';
     color: #999999;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     text-align: center;
     line-height: 1.5rem;
 }
